# libggafx

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
imgui_3rdParty/imgui_grid_image/: imgui_grid_image.cpp  imgui_grid_image.h
imgui_3rdParty/imgui_memory_editor/: imgui_memory_editor.h
include/: SDL_interface.h  bit_manipulate.h  gg_gl_texture.h  gg_type.h  io_enum.h  user_interface.h  videodump_viewer.h
include/ggfxtool/: affine_bg.h  bgcnt.h  bldcnt.h  dispcnt.h  gg_abstract_widget.h  gg_background_viewer.h  gg_gfx_utility.h  gg_palette_viewer.h  gg_sprite_viewer.h  gg_texture.h  gg_tile_viewer.h  mosaic.h  oam.h  ppu.h  ppu_enum.h  window.h
src/: SDL_interface.cpp  gg_gl_texture.cpp  user_interface.cpp  videodump_viewer.cpp
src/ggfxtool/: gg_abstract_widget.cpp  gg_background_viewer.cpp  gg_palette_viewer.cpp  gg_sprite_viewer.cpp  gg_texture.cpp  gg_tile_viewer.cpp
src/ggfxtool/ppu/: affine_background.cpp  ppu.cpp  sprite.cpp  text_background.cpp
